--- a/CGA105G7/.settings/org.eclipse.wst.common.component
+++ b/CGA105G7/.settings/org.eclipse.wst.common.component
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-            
+                
+    
     
     <wb-module deploy-name="CGA105G7">
-                        
+                                
+        
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                        
+                                
+        
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp/WEB-INF/lib"/>
+                                
+        
         
         <property name="java-output-path" value="/CGA105G7/build/classes"/>
+                
         <property name="context-root" value="CGA105G7"/>
-                    
+                            
+    
     
     </wb-module>
-        
+            
+
 
 </project-modules>
